# Yachie

./: .gitignore  CMakeLists.txt  Chip8.cpp  Chip8.h  Display.cpp  LICENSE  README.md  main.cpp
res/: yachie.rc
roms/: JSRTEST  JSRTEST.bak
src/: Chip8.cpp  Chip8.h  Display.h  main.cpp  tinyfiledialogs.h
